# robos-rpa-docs

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  tasks.py
docs/: ambientes.rst  automacao.rst  conf.py  index.rst  intimacao_juridica.rst  intimar_pessoalmente.rst  pre_analise_processo.rst  realizar_expedientes_lote.rst  registros.rst  relatorios.rst  requisitos.rst  tempo_justo.rst
docs/_static/css/: main.css
docs/_static/js/: main.js
