[project]
name = "robos-rpa-docs"
version = "0.2.0"
description = ""
authors = [
    {name = "Igor Carvalho",email = "igbrch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "commitizen (>=4.8.3,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "poethepoet (>=0.37.0,<0.38.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:project.version"]

[tool.poe.tasks]
clean = "make clean"
build = "sphinx-autobuild ./docs ./build --host 0.0.0.0 --port 9000"
docs = ["clean", "build"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
